Div creation for main buttons

--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -15,6 +15,12 @@
     </section>
 }
 <h3>Aproveche las ventajas que LabelSnap le ofrece:</h3>
+<div id="Options">
+	<img src="..\Images\Download">
+	<p>
+		Descargue LabelSnap ahora.
+	</p>
+</div>
 <ol class="round">
     <li class="one">
         <h5>Compatibilidad con una amplia variedad de códigos de barra.</h5>
