--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -14,13 +14,14 @@
         </div>
     </section>
 }
-<h3>Aproveche las ventajas que LabelSnap le ofrece:</h3>
+
 <div id="Options">
-	<img src="..\Images\Download">
+	<img src="..\Images\Download.png" />
 	<p>
 		Descargue LabelSnap ahora.
 	</p>
 </div>
+<h3>Aproveche las ventajas que LabelSnap le ofrece:</h3>
 <ol class="round">
     <li class="one">
         <h5>Compatibilidad con una amplia variedad de códigos de barra.</h5>
