--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -21,6 +21,9 @@
 		Descargue LabelSnap ahora.
 	</p>
 </div>
+<div id="Options2">
+	<img src="..\"
+</div>
 <h3>Aproveche las ventajas que LabelSnap le ofrece:</h3>
 <ol class="round">
     <li class="one">
