--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -14,16 +14,18 @@
         </div>
     </section>
 }
+<div id="OP">
+	<div id="Options">
+		<img src="..\Images\Download.png" />
+		<p>
+			Descargue LabelSnap ahora.
+		</p>
+	</div>
+	<div id="Options2">
+		<img src="..\Images\Buy.png" />
+	</div>
+</div>
 
-<div id="Options">
-	<img src="..\Images\Download.png" />
-	<p>
-		Descargue LabelSnap ahora.
-	</p>
-</div>
-<div id="Options2">
-	<img src="..\"
-</div>
 <h3>Aproveche las ventajas que LabelSnap le ofrece:</h3>
 <ol class="round">
     <li class="one">
