--- a/LabelMasterP/MvcApplication1/Content/Site.css
+++ b/LabelMasterP/MvcApplication1/Content/Site.css
@@ -232,11 +232,23 @@ ul#menu {
         }
 
 		div#Options{
-	background-color: black;
 	max-width:50% ;
+	float: left;
+	max-height:100%;
 }
 		div#Options img{
 			max-width:100%;
+		}
+
+		div#Options2{
+			max-width:50%;
+			float:left;
+			max-height:100%;
+		}
+
+		div#Options2 img{
+			max-width: 100%;
+			height: 100%;
 		}
 /* page titles */
 hgroup.title {
