--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
 		</p>
 	</div>
 	<div id="Options2">
-		<img src="..\Images\Buy.png" />
+		<img src="..\Images\Picture1.png" />
 		<p>
 			Material para impresión.
 		</p>
