--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 }
 <div id="OP">
 	<div id="Options">
-		<img src="..\Images\Download.png" />
+		<img src="..\Images\Picture2.png" />
 		<p>
 			Descargue LabelSnap ahora.
 		</p>
