--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -16,14 +16,14 @@
 }
 <div id="OP">
 	<div id="Options">
-		<img src="..\Images\Picture2.png" />
+		<a href="www.google.com"><img src="..\Images\Picture2.png" /></a>
 		<p>
 			Descargue LabelSnap ahora.
 		</p>
 	</div>
 	<div id="Options2">
-		<img src="..\Images\Picture1.png" />
-		<p>
+		<a href="www.google.com"><img src="..\Images\Picture1.png" /></a>
+			<p>
 			Material para impresión.
 		</p>
 	</div>
