--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 			Material para impresión.
 		</p>
 	</div>
-
+<img id="Divisor" src="../images/Picture3.png"/>
 <h3>Aproveche las ventajas que LabelSnap le ofrece:</h3>
 <ol class="round">
     <li class="one">
