--- a/LabelMasterP/MvcApplication1/Views/Shared/_Layout.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Shared/_Layout.cshtml
@@ -12,7 +12,9 @@
         <header>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
+                    <a class="site-title" href="@Url.Action("Index","Home")">
+						<img src="../Images/Picture4.png"/>
+					</a>
                 </div>
                 <div class="float-right">
                     <section id="login">
