--- a/LabelMasterP/MvcApplication1/Content/Site.css
+++ b/LabelMasterP/MvcApplication1/Content/Site.css
@@ -46,7 +46,7 @@ mark {
     float: left;
 	display:block;
 	margin-bottom:auto;
-	margin-top:1em;
+	margin-top:auto;
 }
 
 .float-right {
@@ -105,6 +105,8 @@ header a{
 
 header img{
 	max-height:100%;
+	max-width: 100%;
+	width:7em;
 }
 .content-wrapper {
     margin: 0 auto;
@@ -156,6 +158,9 @@ footer {
     text-decoration: none;
 }
 
+header div{
+	max-width:100%;
+}
 
 /* login
 ----------------------------------------------------------*/
@@ -659,7 +664,7 @@ tr.pager td {
 /********************
 *   Mobile Styles   *
 ********************/
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 650px) {
 
     /* header
     ----------------------------------------------------------*/
@@ -672,6 +677,9 @@ tr.pager td {
     header .site-title {
         margin: 10px;
         text-align: center;
+		display:block;
+		margin-left:auto;
+		margin-right:auto;
     }
 
     /* login */
