--- a/LabelMasterP/MvcApplication1/Content/Site.css
+++ b/LabelMasterP/MvcApplication1/Content/Site.css
@@ -31,6 +31,10 @@ a {
         background-color: #c7d1d6;
     }
 
+	a.site-title:hover {
+		background-color:#fff;
+	}
+
 header, footer, hgroup,
 nav, section {
     display: block;
