--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <section class="featured">
         <div class="content-wrapper">
             <hgroup class="title">
-                <h1>@ViewBag.Title.</h1>
+                <h1>Soluciones para impresión de etiquetas láser y thermal transfer.</h1>
                 <h2></h2>
             </hgroup>
             <p>
@@ -17,13 +17,13 @@
 	<div id="Options">
 		<a href="www.google.com"><img src="..\Images\Picture2.png" /></a>
 		<p>
-			Descargue LabelSnap ahora.
+			Descargue el software de diseño e impresión LabelSnap ahora.
 		</p>
 	</div>
 	<div id="Options2">
 		<a href="www.google.com"><img src="..\Images\Picture1.png" /></a>
 			<p>
-			Material para impresión.
+			Compre material para impresión.
 		</p>
 	</div>
 <img id="Divisor" src="../images/Picture3.png"/>
