--- a/LabelMasterP/MvcApplication1/Views/Home/About.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/About.cshtml
@@ -3,17 +3,17 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>@ViewBag.Message</h2>
+    <h1>LabelSnap.</h1>
+    <h2>Software de diseño e impresión de etiquetas láser y thermal transfer.</h2>
 </hgroup>
 
 <article>
     <p>
-        Use this area to provide additional information.
+        En LabelSnap le ofrecemos la atención, software, equipo y material para su sistema de impresión.
     </p>
 
     <p>
-        Use this area to provide additional information.
+        
     </p>
 
     <p>
@@ -22,9 +22,13 @@
 </article>
 
 <aside>
-    <h3>Aside Title</h3>
+    <h3>Concacte a LabelSnap</h3>
     <p>
-        Use this area to provide additional information.
+        LabelSnap S.A. de C.V
+		Camino de los Bengalies 1004
+		Monterrey, Nuevo León
+		México
+		Tel: (81)-2029-8446
     </p>
     <ul>
         <li>@Html.ActionLink("Home", "Index", "Home")</li>
