--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <section class="featured">
         <div class="content-wrapper">
             <hgroup class="title">
-                <h1>Soluciones para impresión de etiquetas láser y thermal transfer.</h1>
+                <h1>Software de diseño para etiquetas láser con código de barras.</h1>
                 <h2></h2>
             </hgroup>
             <p>
@@ -14,6 +14,8 @@
         </div>
     </section>
 }
+<h2 id="Presentation">Le presentamos: LabelSnap</h2>
+<p> LabelSnap es un software de diseño e impresión de etiquetas con código de barras para uso industrial. Su sencilla e intuitiva interfase es ideal para compañías con diseños simples de etiqueta. Enriquecido con una variedad de funciones y servicios, LabslSnap es su opción confiable y a precio razonable. Pruebe LabelSnap en cuestión de segundos dando click <a href="www.google.com">aquí</a></p>
 	<div id="Options">
 		<a href="www.google.com"><img src="..\Images\Picture2.png" /></a>
 		<p>
@@ -46,3 +48,5 @@
         Fácil y rápido contará usted con un sistema simple de uso diario que le ofrece impresión de alta calidad.
     </li>
 </ol>
+<img id="Divisor" src="../images/Picture3.png" />
+
