--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -49,4 +49,6 @@
     </li>
 </ol>
 <img id="Divisor" src="../images/Picture3.png" />
-
+<div id="Feature1">
+	<img src="../Images/Feature1.png"
+</div>
