--- a/LabelMasterP/MvcApplication1/Views/Home/About.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/About.cshtml
@@ -22,14 +22,7 @@
 </article>
 
 <aside>
-    <h3>Concacte a LabelSnap</h3>
-    <p>
-        LabelSnap S.A. de C.V
-		Camino de los Bengalies 1004
-		Monterrey, Nuevo León
-		México
-		Tel: (81)-2029-8446
-    </p>
+    <h3>Empresas Asociadas</h3>
     <ul>
         <li>@Html.ActionLink("Home", "Index", "Home")</li>
         <li>@Html.ActionLink("About", "About", "Home")</li>
