--- a/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Home/Index.cshtml
@@ -49,6 +49,22 @@
     </li>
 </ol>
 <img id="Divisor" src="../images/Picture3.png" />
-<div id="Feature1">
-	<img src="../Images/Feature1.png"
+<h3>Características</h3>
+<div id="Features">
+	<img id="Feature1" src="../Images/Feature1.png"/>
+	<img id="Feature2" src="../Images/Feature2.png"/>
 </div>
+<div id="FeatureList">
+	<a href="#" onclick="toggle_visibility('Feature1');">
+		<p id="pFeature1">
+			Interfaz sencilla apoyada por Wizards que lo guiarán en el diseño de la mejor etiqueta.
+		</p>
+	</a>
+	<a href="#" onclick="toggle_visibility('Feature2');">
+		<p id="pFeature2">
+			Fácil acceso a una variedad ilimitada de tipos y tamaños de códigos de barra.
+		</p>
+	</a>
+</div>
+<img id="Divisor" src="../images/Picture3.png" />
+<h3>Requisitos de Hardware</h3>
