--- a/LabelMasterP/MvcApplication1/Content/Site.css
+++ b/LabelMasterP/MvcApplication1/Content/Site.css
@@ -19,7 +19,7 @@ a {
     outline: none;
     padding-left: 3px;
     padding-right: 3px;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
     a:link, a:visited,
@@ -317,14 +317,21 @@ div#Features{
 	margin-top:1.5em;
 }
 
+img#Feature1{
+	display:block;
+	max-width:100%;
+}
+
 img#Feature2{
 	display:none;
+	max-width:100%;
 }
 
 div#FeatureList{
-	max-width:30%;
+	max-width:25%;
 	float:right;
 	margin-top:1.5em;
+	margin-left:5%;
 }
 
 p#Feature1{
