--- a/LabelMasterP/MvcApplication1/Views/Shared/_Layout.cshtml
+++ b/LabelMasterP/MvcApplication1/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
+		<script type="text/javascript" src="DispNoDisp.js"></script>
     </head>
     <body>
         <header>
