--- a/LabelMasterP/MvcApplication1/Content/Site.css
+++ b/LabelMasterP/MvcApplication1/Content/Site.css
@@ -71,7 +71,7 @@ mark {
 h1, h2, h3,
 h4, h5, h6 {
     color: #000;
-    margin-bottom: 0;
+    margin-bottom: 0.5em;
     padding-bottom: 0;
 }
 
@@ -314,7 +314,9 @@ img#Divisor{
 div#Features{
 	max-width:70%;
 	float: left;
-	margin-top:1.5em;
+	display:block;
+	margin-top:auto;
+	margin-bottom:auto;
 }
 
 img#Feature1{
@@ -330,12 +332,11 @@ img#Feature2{
 div#FeatureList{
 	max-width:25%;
 	float:right;
-	margin-top:1.5em;
-	margin-left:5%;
 }
 
 p#Feature1{
 	float:right;
+	margin: 0 0 0 0;
 }
 
 p#Feature2{
@@ -871,3 +872,19 @@ tr.pager td {
         }
 }
 
+/*Still smaller sites
+	-----------------------------------*/
+@media only screen and (max-width: 550px){
+	div#Features{
+		float:none;
+		margin-left:auto;
+		margin-right:auto;
+	}
+
+	div#FeatureList{
+		float:none;
+		margin-left:auto;
+		margin-right:auto;
+		max-width:100%;
+	}
+}
